--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rename_device"
+name = "ifcfg_devname"
 version = "0.1.0"
 authors = ["Jan Macku <jamacku@redhat.com>"]
 edition = "2018"
