--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,14 @@ edition = "2018"
 
 [dependencies]
 mac_address = "1.1.1"
+
+# globbing
 glob = "0.3.0"
+
+# parsing
 regex = "1.5.4"
 lazy_static = "1.4.0"
+
+# logging
+syslog = "5.0.0"
+log = "0.4.14"
