Add alternative paths to cmdline and ifcfgs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = "1.4.0"
 syslog = "5.0.0"
 log = "0.4.14"
 
+# integration testing
 [dev-dependencies]
 assert_cmd = "2.0.1"
 predicates = "2.0.2"
