--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,6 @@ log = "0.4.14"
 [dev-dependencies]
 assert_cmd = "2.0.1"
 predicates = "2.0.2"
+
+serde = { version = "1.0.117", features = ["derive"]}
 serde_json = "1.0.67"
