--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,14 @@ lazy_static = "1.4.0"
 syslog = "5.0.0"
 log = "0.4.14"
 
+
 # integration testing
 [dev-dependencies]
+
+# command exevution
 assert_cmd = "2.0.1"
 predicates = "2.0.2"
 
-serde = { version = "1.0.117", features = ["derive"]}
+# JSON
+serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.67"
