--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -16,7 +16,10 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-      run: cargo build --release --all-features
+      uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: --release --all-features
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
