--- a/.github/workflows/ifcfg-devname-test-coverage.yml
+++ b/.github/workflows/ifcfg-devname-test-coverage.yml
@@ -6,17 +6,48 @@ on:
     branches:
       - main
 
-name: Test with Code Coverage
+name: Build and Test Coverage
 
 jobs:
-  test:
-    name: Test
+  build:
+    name: Build
     env:
       PROJECT_NAME_UNDERSCORE: ifcfg_devname
       CARGO_INCREMENTAL: 0
       RUSTFLAGS: -Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort
       RUSTDOCFLAGS: -Cpanic=abort
+      CACHE_NAME: cache-dependencies
 
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+
+      - name: Compile ifcfg-devname
+      - run: |
+        cargo build
+
+      # improve performace of workflow
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/.crates.toml
+            ~/.cargo/.crates2.json
+            ~/.cargo/bin
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
+            target
+          key: ${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ hashFiles('Cargo.lock') }}
+
+  test-coverage:
+    name: Test coverage
     runs-on: ubuntu-latest
     steps:
 
@@ -31,8 +62,6 @@ jobs:
       # improve performace of workflow
       - name: Cache dependencies
         uses: actions/cache@v2
-        env:
-          cache-name: cache-dependencies
         with:
           path: |
             ~/.cargo/.crates.toml
@@ -41,7 +70,7 @@ jobs:
             ~/.cargo/registry/index
             ~/.cargo/registry/cache
             target
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Cargo.lock') }}
+          key: ${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ hashFiles('Cargo.lock') }}
 
       - name: Generate test result and coverage report
         run: |
@@ -49,13 +78,6 @@ jobs:
           cargo test $CARGO_OPTIONS -- -Z unstable-options --format json | cargo2junit > results.xml;
           zip -0 ccov.zip `find . \( -name "$PROJECT_NAME_UNDERSCORE*.gc*" \) -print`;
           grcov ccov.zip -s . -t lcov --llvm --ignore-not-existing --ignore "/*" --ignore "tests/*" -o lcov.info;
-
-      - name: Upload test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        with:
-          check_name: Test Results
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: results.xml
 
       - name: Upload to CodeCov
         uses: codecov/codecov-action@v1
