--- a/codecov.yml
+++ b/codecov.yml
@@ -4,3 +4,10 @@ coverage:
       default:
         target: 80%    # the required coverage value
         threshold: 1%  # the leniency in hitting the target
+      unit:
+        flags:
+          - unit
+      integration:
+        flags:
+          - integration
+          
