--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "ifcfg-devname"
+
 version = "0.1.0"
-authors = ["Jan Macku <jamacku@redhat.com>"]
 edition = "2018"
+license = "GPL-3.0"
+authors = ["Jan Macku <jamacku@redhat.com>"]
+repository = "https://github.com/jamacku/ifcfg-devname"
+
+keywords = ["ifcfg", "udev"]
+categories = []
+description = "TBD"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
