--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/jamacku/ifcfg-devname"
 
 keywords = ["ifcfg", "udev"]
 categories = []
-description = "TBD"
+description = "Udev helper utility that provides network interface naming using kernel cmdline and ifcfg configuration"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
