--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 authors = ["Jan Macku <jamacku@redhat.com>"]
 repository = "https://github.com/jamacku/ifcfg-devname"
+exclude = ["./.codecov.yml", "./mergify.yml", "/target/*", "/.github/*"]
 
 keywords = ["ifcfg", "udev"]
 categories = []
