--- a/.packit.yml
+++ b/.packit.yml
@@ -9,7 +9,14 @@ downstream_package_name: rust-ifcfg-devname
 
 jobs:
   - job: copr_build
-    trigger: [release, pull-request]
+    trigger: pull_request
+    metadata:
+      targets:
+        - fedora-rawhide
+        - centos-stream-x86_64
+
+  - job: copr_build
+    trigger: release
     metadata:
       targets:
         - fedora-rawhide
