--- a/.packit.yml
+++ b/.packit.yml
@@ -13,14 +13,14 @@ jobs:
     metadata:
       targets:
         - fedora-rawhide
-        - centos-stream-x86_64
+        - centos-stream-9-x86_64
 
   - job: copr_build
     trigger: release
     metadata:
       targets:
         - fedora-rawhide
-        - centos-stream-x86_64
+        - centos-stream-9-x86_64
 
   - job: propose_downstream
     trigger: release
