ci(Mergify): configuration update
Signed-off-by: Jan Macku <null>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -125,7 +125,7 @@ pull_request_rules:
 
   - name: Remove test label
     conditions:
-      - -files~=^test/
+      - -files~=^tests/
     actions:
       label:
         remove:
