--- a/.packit.yml
+++ b/.packit.yml
@@ -1,6 +1,5 @@
-# Packit config
-# doc: https://packit.dev/docs/
 ---
+
 specfile_path: ./rust-ifcfg-devname.spec
 upstream_tag_template: "v{version}"
 
@@ -8,22 +7,17 @@ upstream_package_name: ifcfg-devname
 downstream_package_name: rust-ifcfg-devname
 
 jobs:
-  - job: copr_build
+  - &copr
+    job: copr_build
     trigger: pull_request
-    metadata:
-      targets:
-        - fedora-rawhide
-        - centos-stream-9-x86_64
+    targets:
+      - fedora-rawhide-x86_64
+      - centos-stream-9-x86_64
 
-  - job: copr_build
+  - <<: *copr
     trigger: release
-    metadata:
-      targets:
-        - fedora-rawhide
-        - centos-stream-9-x86_64
 
   - job: propose_downstream
     trigger: release
-    metadata:
-      dist_git_branches:
-        - main
+    dist_git_branches:
+      - main
