--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,11 +43,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install rust ${{ matrix.rust }}
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ matrix.rust }}
-          override: true
-          profile: minimal
 
       - name: Install Development Tools packages
         # required to be able to build rust packages: Development Tools
@@ -57,18 +55,14 @@ jobs:
 
       - name: Test
         if: ${{ matrix.coverage != true }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --no-fail-fast
+        run: |
+          cargo test --all-features --no-fail-fast
 
       - name: Test + Coverage
         # -Z flag is available only on rust nightly
         if: ${{ matrix.coverage == true }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --no-fail-fast
+        run: |
+          cargo test --all-features --no-fail-fast
         env:
           CARGO_INCREMENTAL: '0'
           RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
@@ -94,18 +88,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install latest stable rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          override: true
-          profile: minimal
           components: rustfmt
 
       - name: Check format
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check
+        run: |
+          cargo fmt -- --check
 
   clippy:
     name: Cargo Clippy
@@ -118,11 +108,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install latest nightly rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: nightly
-          override: true
-          profile: minimal
           components: clippy
 
       # https://github.com/psastras/sarif-rs
