--- a/.packit.yml
+++ b/.packit.yml
@@ -13,13 +13,8 @@ jobs:
     job: copr_build
     trigger: pull_request
     targets:
+      - fedora-stable-x86_64
       - fedora-rawhide-x86_64
-      - centos-stream-9-x86_64
 
   - <<: *copr
     trigger: release
-
-  - job: propose_downstream
-    trigger: release
-    dist_git_branches:
-      - main
