ci: remove EOL Fedora releases from CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         rust: [ stable, nightly ]
-        fedora: [ 37, 38, 39, rawhide ]
+        fedora: [ 39, 40, rawhide ]
         include:
           - rust: nightly
             fedora: 39
